button をリストラ

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 </div>
             </div>
         </div>
-        <div class="buttons">
-            <button id="rotateL" class="rot-btn">rotate L</button>
-            <button id="rotateR" class="rot-btn">rotate R</button>
+        <div class="guides">
+            <div class="guide" id="guideL"><span></span></div>
+            <div class="guide" id="guideR"><span></span></div>
         </div>
     </div>
     <script src="js/script.js"></script>
