コンテンツを入れた

--- a/index.html
+++ b/index.html
@@ -14,55 +14,51 @@
                 </div>
 
                 <div class="container">
-                    <div class="left">
-                        <h2>Left</h2>
-                    </div>
+                    <h2>これは？</h2>
+                    某ゲームのスタートボタン押したときみたいなウェブページです
 
-                    <div class="right">
-                        <h2>Right</h2>
-                    </div>
+                    <h3>動作環境</h3>
+                    <a href="https://developer.mozilla.org/ja/docs/Web/API/Element/computedStyleMap#%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E3%83%BC%E3%81%AE%E4%BA%92%E6%8F%9B%E6%80%A7"
+                        target="_blank">ブラウザーーの互換性</a>
+
+                    <h3>操作</h3>
+                    左右のガイドをクリックするか、矢印キーを押してみてください
                 </div>
 
-                <div class="footer">
-                    <h2>Footer</h2>
+                <div class="container fit flex">
+                    <h3>作った人</h3>
+                    <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
+                        @budoucha
+                    </a>
                 </div>
             </div>
+
             <div class="pane" id="pane2">
                 <div class="header">
                     <h1>Home2</h1>
                 </div>
 
                 <div class="container">
-                    <div class="left">
-                        <h2>Left</h2>
-                    </div>
-
-                    <div class="right">
-                        <h2>Right</h2>
-                    </div>
-                </div>
-
-                <div class="footer">
-                    <h2>Footer</h2>
+                    <h2>右の画面です</h2>
                 </div>
             </div>
+
             <div class="pane" id="pane3">
                 <div class="header">
                     <h1>Home3</h1>
                 </div>
 
                 <div class="container">
-                    <div class="left">
-                        <h2>Left</h2>
-                    </div>
-
-                    <div class="right">
-                        <h2>Right</h2>
-                    </div>
+                    <h2>ここは最初の画面の背面です</h2>
                 </div>
 
-                <div class="footer">
-                    <h2>Footer</h2>
+                <div class="container fit flex">
+                    <h3>Repository</h3>
+                    <a href="https://github.com/budoucha/otslayout" target="_blank">
+                        <div class="git-link">
+                            <span>otslayout</span>
+                        </div>
+                    </a>
                 </div>
             </div>
 
@@ -72,17 +68,10 @@
                 </div>
 
                 <div class="container">
-                    <div class="left">
-                        <h2>Left</h2>
-                    </div>
-
-                    <div class="right">
-                        <h2>Right</h2>
-                    </div>
+                    <h2>左の画面です</h2>
                 </div>
 
                 <div class="footer">
-                    <h2>Footer</h2>
                 </div>
             </div>
         </div>
