朝4時だけど誤字

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <h3>動作環境</h3>
                     <a href="https://developer.mozilla.org/ja/docs/Web/API/Element/computedStyleMap#%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E3%83%BC%E3%81%AE%E4%BA%92%E6%8F%9B%E6%80%A7"
-                        target="_blank">ブラウザーーの互換性</a>
+                        target="_blank">ブラウザーの互換性</a>
 
                     <h3>操作</h3>
                     左右のガイドをクリックするか、矢印キーを押してみてください
