header, main, footer三段構成に

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                     <h1>Home2</h1>
                 </div>
 
-                <div class="container">
-                    <h2>右の画面です</h2>
+                <div class="main">
+                    <div class="container">
+                        <h2>右の画面です</h2>
+                    </div>
                 </div>
             </div>
 
@@ -48,17 +50,19 @@
                     <h1>Home3</h1>
                 </div>
 
-                <div class="container">
-                    <h2>ここは最初の画面の背面です</h2>
-                </div>
+                <div class="main">
+                    <div class="container">
+                        <h2>ここは最初の画面の背面です</h2>
+                    </div>
 
-                <div class="container fit flex">
-                    <h3>Repository</h3>
-                    <a href="https://github.com/budoucha/otslayout" target="_blank">
-                        <div class="git-link">
-                            <span>otslayout</span>
-                        </div>
-                    </a>
+                    <div class="container fit flex">
+                        <h3>Repository</h3>
+                        <a href="https://github.com/budoucha/otslayout" target="_blank">
+                            <div class="git-link">
+                                <span>otslayout</span>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -67,11 +71,14 @@
                     <h1>Home4</h1>
                 </div>
 
-                <div class="container">
-                    <h2>左の画面です</h2>
+                <div class="main">
+                    <div class="container">
+                        <h2>左の画面です</h2>
+                    </div>
                 </div>
 
                 <div class="footer">
+                    いかがでしたか？
                 </div>
             </div>
         </div>
