現状(後で直す)

--- a/index.html
+++ b/index.html
@@ -25,12 +25,21 @@
                     左右のガイドをクリックするか、矢印キーを押してみてください
                 </div>
 
-                <div class="container fit flex">
+                <div class="container container-flex">
                     <h3>作った人</h3>
-                    <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
-                        @budoucha
-                    </a>
+                    <div class="container container-fit">
+                        <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
+                            twitter (𝕏)
+                        </a>
+                    </div>
+                    <div class="container container-fit">
+                        <a href="https://github.com/budoucha" target="_blank" class="block twi-link half">
+                            github
+                        </a>
+                    </div>
+
                 </div>
+
             </div>
 
             <div class="pane" id="pane2">
@@ -39,6 +48,12 @@
                 </div>
 
                 <div class="main">
+                    <div class="container">
+                        <h2>右の画面です</h2>
+                    </div>
+                    <div class="container">
+                        <h2>右の画面です</h2>
+                    </div>
                     <div class="container">
                         <h2>右の画面です</h2>
                     </div>
