干渉しにくくなってると嬉しい

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div class="panes-container">
+    <div class="otslayout">
         <div class="panes">
             <div class="pane" id="pane1">
                 <div class="header">
