--- a/index.html
+++ b/index.html
@@ -13,31 +13,32 @@
                     <h1>Home1</h1>
                 </div>
 
-                <div class="container">
-                    <h2>これは？</h2>
-                    某ゲームのスタートボタン押したときみたいなウェブページです
+                <div class="main">
+                    <div class="container">
+                        <h2>これは？</h2>
+                        某ゲームのスタートボタン押したときみたいなウェブページです
 
-                    <h3>動作環境</h3>
-                    <a href="https://developer.mozilla.org/ja/docs/Web/API/Element/computedStyleMap#%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E3%83%BC%E3%81%AE%E4%BA%92%E6%8F%9B%E6%80%A7"
-                        target="_blank">ブラウザーの互換性</a>
+                        <h3>動作環境</h3>
+                        <a href="https://developer.mozilla.org/ja/docs/Web/API/Element/computedStyleMap#%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E3%83%BC%E3%81%AE%E4%BA%92%E6%8F%9B%E6%80%A7"
+                            target="_blank">ブラウザーの互換性</a>
 
-                    <h3>操作</h3>
-                    左右のガイドをクリックするか、矢印キーを押してみてください
-                </div>
-
-                <div class="container container-flex">
-                    <h3>作った人</h3>
-                    <div class="container container-fit">
-                        <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
-                            twitter (𝕏)
-                        </a>
-                    </div>
-                    <div class="container container-fit">
-                        <a href="https://github.com/budoucha" target="_blank" class="block twi-link half">
-                            github
-                        </a>
+                        <h3>操作</h3>
+                        左右のガイドをクリックするか、矢印キーを押してみてください
                     </div>
 
+                    <div class="container container-flex">
+                        <h3>作った人</h3>
+                        <div class="container container-fit">
+                            <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
+                                twitter (𝕏)
+                            </a>
+                        </div>
+                        <div class="container container-fit">
+                            <a href="https://github.com/budoucha" target="_blank" class="block twi-link half">
+                                github
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
             </div>
