otsのスタイルを分離

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ots.css">
 </head>
 
 <body>
     <div class="otslayout">
         <div class="panes">
-            <div class="pane" id="pane1">
+            <div class="pane pane1">
                 <div class="header">
                     <h1>Home1</h1>
                 </div>
@@ -43,7 +44,7 @@
 
             </div>
 
-            <div class="pane" id="pane2">
+            <div class="pane pane2">
                 <div class="header">
                     <h1>Home2</h1>
                 </div>
@@ -61,7 +62,7 @@
                 </div>
             </div>
 
-            <div class="pane" id="pane3">
+            <div class="pane pane3">
                 <div class="header">
                     <h1>Home3</h1>
                 </div>
@@ -82,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="pane" id="pane4">
+            <div class="pane pane4">
                 <div class="header">
                     <h1>Home4</h1>
                 </div>
