--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         左右のガイドをクリックするか、矢印キーを押してみてください
                     </div>
 
-                    <div class="container container-flex">
+                    <div class="container container-flex-row">
                         <h3>作った人</h3>
                         <div class="container container-fit">
                             <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
