--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <h3>作った人</h3>
                         <div class="container container-fit">
                             <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
-                                twitter (𝕏)
+                                twitter&nbsp(𝕏)
                             </a>
                         </div>
                         <div class="container container-fit">
