flex-row周りの応急処置

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
                     <div class="container container-flex-row">
                         <h3>作った人</h3>
-                        <div class="container container-fit">
+                        <div class="container">
                             <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
                                 twitter&nbsp(𝕏)
                             </a>
                         </div>
-                        <div class="container container-fit">
+                        <div class="container">
                             <a href="https://github.com/budoucha" target="_blank" class="block twi-link half">
                                 github
                             </a>
