--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
 
                 <div class="main">
-                    <div class="container">
+                    <div class="ots-item">
                         <h2>これは？</h2>
                         某ゲームのスタートボタン押したときみたいなウェブページです
 
@@ -27,14 +27,14 @@
                         左右のガイドをクリックするか、矢印キーを押してみてください
                     </div>
 
-                    <div class="container container-flex-row">
+                    <div class="ots-item ots-item-flex-row">
                         <h3>作った人</h3>
-                        <div class="container">
+                        <div class="ots-item">
                             <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
                                 twitter&nbsp(𝕏)
                             </a>
                         </div>
-                        <div class="container">
+                        <div class="ots-item">
                             <a href="https://github.com/budoucha" target="_blank" class="block twi-link half">
                                 github
                             </a>
@@ -50,13 +50,13 @@
                 </div>
 
                 <div class="main">
-                    <div class="container">
+                    <div class="ots-item">
                         <h2>右の画面です</h2>
                     </div>
-                    <div class="container">
+                    <div class="ots-item">
                         <h2>右の画面です</h2>
                     </div>
-                    <div class="container">
+                    <div class="ots-item">
                         <h2>右の画面です</h2>
                     </div>
                 </div>
@@ -68,11 +68,11 @@
                 </div>
 
                 <div class="main">
-                    <div class="container">
+                    <div class="ots-item">
                         <h2>ここは最初の画面の背面です</h2>
                     </div>
 
-                    <div class="container fit flex">
+                    <div class="ots-item fit flex">
                         <h3>Repository</h3>
                         <a href="https://github.com/budoucha/otslayout" target="_blank">
                             <div class="git-link">
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="main">
-                    <div class="container">
+                    <div class="ots-item">
                         <h2>左の画面です</h2>
                     </div>
                 </div>
