--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                         左右のガイドをクリックするか、矢印キーを押してみてください
                     </div>
 
+                    
                     <div class="ots-item ots-item-flex-row">
-                        <h3>作った人</h3>
+                        <h3 class="centered">作った人</h3>
                         <div class="ots-item">
                             <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
                                 twitter&nbsp(𝕏)
