--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                     <div class="ots-item ots-item-flex-row">
                         <h3 class="centered">作った人</h3>
                         <div class="ots-item">
-                            <a href="https://twitter.com/budoucha" target="_blank" class="block twi-link half">
+                            <a href="https://twitter.com/budoucha" target="_blank" class="display-block">
                                 twitter&nbsp(𝕏)
                             </a>
                         </div>
                         <div class="ots-item">
-                            <a href="https://github.com/budoucha" target="_blank" class="block twi-link half">
+                            <a href="https://github.com/budoucha" target="_blank" class="display-block">
                                 github
                             </a>
                         </div>
