オンオフ実装

--- a/index.html
+++ b/index.html
@@ -7,102 +7,109 @@
 </head>
 
 <body>
+    <div class="introduction">
+        <p>Press S key to enable/disable</p>
+        <p>... or the button below</p>
+    </div>
     <div class="otslayout">
-        <div class="panes">
-            <div class="pane pane1">
-                <div class="header">
-                    <h1>Home1</h1>
-                </div>
-
-                <div class="main">
-                    <div class="ots-item">
-                        <h2>これは？</h2>
-                        某ゲームのスタートボタン押したときみたいなウェブページです
-
-                        <h3>動作環境</h3>
-                        <a href="https://developer.mozilla.org/ja/docs/Web/API/Element/computedStyleMap#%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E3%83%BC%E3%81%AE%E4%BA%92%E6%8F%9B%E6%80%A7"
-                            target="_blank">ブラウザーの互換性</a>
-
-                        <h3>操作</h3>
-                        左右のガイドをクリックするか、矢印キーを押してみてください
+        <button class="main-switch">enable / disable</button>
+        <div class="content disabled">
+            <div class="panes">
+                <div class="pane pane1">
+                    <div class="header">
+                        <h1>Home1</h1>
                     </div>
 
-                    
-                    <div class="ots-item ots-item-flex-row">
-                        <h3 class="centered">作った人</h3>
+                    <div class="main">
                         <div class="ots-item">
-                            <a href="https://twitter.com/budoucha" target="_blank" class="display-block">
-                                twitter&nbsp(𝕏)
-                            </a>
+                            <h2>これは？</h2>
+                            某ゲームのスタートボタン押したときみたいなウェブページです
+
+                            <h3>動作環境</h3>
+                            <a href="https://developer.mozilla.org/ja/docs/Web/API/Element/computedStyleMap#%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E3%83%BC%E3%81%AE%E4%BA%92%E6%8F%9B%E6%80%A7"
+                                target="_blank">ブラウザーの互換性</a>
+
+                            <h3>操作</h3>
+                            左右のガイドをクリックするか、矢印キーを押してみてください
                         </div>
-                        <div class="ots-item">
-                            <a href="https://github.com/budoucha" target="_blank" class="display-block">
-                                github
-                            </a>
-                        </div>
-                    </div>
-                </div>
 
-            </div>
 
-            <div class="pane pane2">
-                <div class="header">
-                    <h1>Home2</h1>
-                </div>
-
-                <div class="main">
-                    <div class="ots-item">
-                        <h2>右の画面です</h2>
-                    </div>
-                    <div class="ots-item">
-                        <h2>右の画面です</h2>
-                    </div>
-                    <div class="ots-item">
-                        <h2>右の画面です</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="pane pane3">
-                <div class="header">
-                    <h1>Home3</h1>
-                </div>
-
-                <div class="main">
-                    <div class="ots-item">
-                        <h2>ここは最初の画面の背面です</h2>
-                    </div>
-
-                    <div class="ots-item fit flex">
-                        <h3>Repository</h3>
-                        <a href="https://github.com/budoucha/otslayout" target="_blank">
-                            <div class="git-link">
-                                <span>otslayout</span>
+                        <div class="ots-item ots-item-flex-row">
+                            <h3 class="centered">作った人</h3>
+                            <div class="ots-item">
+                                <a href="https://twitter.com/budoucha" target="_blank" class="display-block">
+                                    twitter&nbsp(𝕏)
+                                </a>
                             </div>
-                        </a>
+                            <div class="ots-item">
+                                <a href="https://github.com/budoucha" target="_blank" class="display-block">
+                                    github
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="pane pane2">
+                    <div class="header">
+                        <h1>Home2</h1>
+                    </div>
+
+                    <div class="main">
+                        <div class="ots-item">
+                            <h2>右の画面です</h2>
+                        </div>
+                        <div class="ots-item">
+                            <h2>右の画面です</h2>
+                        </div>
+                        <div class="ots-item">
+                            <h2>右の画面です</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pane pane3">
+                    <div class="header">
+                        <h1>Home3</h1>
+                    </div>
+
+                    <div class="main">
+                        <div class="ots-item">
+                            <h2>ここは最初の画面の背面です</h2>
+                        </div>
+
+                        <div class="ots-item fit flex">
+                            <h3>Repository</h3>
+                            <a href="https://github.com/budoucha/otslayout" target="_blank">
+                                <div class="git-link">
+                                    <span>otslayout</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pane pane4">
+                    <div class="header">
+                        <h1>Home4</h1>
+                    </div>
+
+                    <div class="main">
+                        <div class="ots-item">
+                            <h2>左の画面です</h2>
+                        </div>
+                    </div>
+
+                    <div class="footer">
+                        いかがでしたか？
                     </div>
                 </div>
             </div>
-
-            <div class="pane pane4">
-                <div class="header">
-                    <h1>Home4</h1>
-                </div>
-
-                <div class="main">
-                    <div class="ots-item">
-                        <h2>左の画面です</h2>
-                    </div>
-                </div>
-
-                <div class="footer">
-                    いかがでしたか？
-                </div>
+            <div class="guides">
+                <div class="guide" id="guideL"><span></span></div>
+                <div class="guide" id="guideR"><span></span></div>
             </div>
-        </div>
-        <div class="guides">
-            <div class="guide" id="guideL"><span></span></div>
-            <div class="guide" id="guideR"><span></span></div>
         </div>
     </div>
     <script src="js/script.js"></script>
